<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TerceiraActivity">


    <EditText
        android:id="@+id/qtdKm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtQtdKm"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/qtdTanque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/qtdKm"
        android:hint="@string/edtQtdCombustivel"
        android:inputType="numberDecimal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCalcularConsumo"
        android:layout_below="@id/qtdTanque"
        android:text="@string/btnCalular" />

</RelativeLayout>