<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginTop="10dp"
            android:background="@mipmap/ic_gas_pump"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/btnCombustivel"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnAutonomia" />

        <Button
            android:layout_marginTop="10dp"
            android:background="@mipmap/ic_gas_fuel"
            android:id="@+id/btnAutonomia"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnCombustivel" />

        <Button
            android:layout_marginTop="10dp"
            android:background="@mipmap/ic_pressure"
            android:id="@+id/btnEmail"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btnEmail" />
        <Button
            android:layout_marginTop="10dp"
            android:background="@mipmap/ic_desenho_chaves"
            android:id="@+id/btnChaves"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Chaves" />
    </LinearLayout>

</RelativeLayout>